--- a/app/globals.css
+++ b/app/globals.css
@@ -148,7 +148,7 @@
 
 /* START: Custom Filter styles */
 .custom-filter__btn {
-  @apply relative w-full min-w-[127px] flex justify-between items-center cursor-default rounded-lg bg-white py-2 px-3 text-left shadow-md sm:text-sm border;
+  @apply relative w-full min-w-[110px] flex justify-between items-center cursor-default rounded-lg bg-white py-2 px-3 text-left shadow-md sm:text-sm border;
 }
 
 .custom-filter__options {
@@ -192,7 +192,7 @@
 }
 
 .searchbar__item {
-  @apply flex-1 max-md:w-full flex justify-start items-center relative;
+  @apply flex-1 max-md:w-full flex justify-start items-start relative;
 }
 
 .searchbar__input {
@@ -219,5 +219,5 @@
 /* END: search manufacturer styles */
 
 .contact-link {
-  @apply text-black-100 font-semibold text-lg hover:text-blue-600
+  @apply text-black-100 font-semibold text-lg hover:text-blue-600;
 }
